--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "react-map-gl": "^7.1.7",
     "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.5"
   },
